@@ -17,6 +17,8 @@
 	"alternate interface" to GNU Readline, it is useless here. The only
 	required thing is setting rl_getc_function.
 
+	* src/gpexecute.c (gp_exec_event): Cleanup: Use DEBUG and FPRINTF.
+
 2007-06-17  Ethan Merritt  <merritt@u.washington.edu>
 
 	* src/internal.c (f_sprintf): Remove any remaining escape sequences (%%)
